--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,59 @@
-# ----------------------
-# Flask
-# ----------------------
-flask
-flask-restful
-flask-socketio
-
-# ----------------------
-# Database
-# ----------------------
-mongoengine
-
-# ----------------------
-# Production Server
-# ----------------------
+beautifulsoup4==4.6.0
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+cycler==0.10.0
+DateTime==4.2
+dom==0.9
+dominate==2.3.1
+et-xmlfile==1.0.1
+Faker==0.8.16
+Flask==1.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==0.14.2
+gmail==0.6.3
+htmldom==2.0
+idna==2.6
+itsdangerous==0.24
+jdcal==1.4
+Jinja2==2.10
+kiwisolver==1.0.1
+lml==0.0.1
+MarkupSafe==1.0
+matplotlib==2.2.2
+mongoengine==0.15.0
+numpy==1.14.4
+objects==0.3.1
+openpyxl==2.5.4
+Pillow==5.1.0
+pipenv==2018.7.1
+pyexcel==0.5.8
+pyexcel-io==0.5.7
+pyexcel-xls==0.5.7
+pyexcel-xlsx==0.5.6
+pymongo==3.6.1
+pyparsing==2.2.0
+PyQt5==5.10.1
+python-dateutil==2.7.3
+pytube==9.2.2
+pytz==2018.4
+requests==2.18.4
+simplejson==3.15.0
+sip==4.19.8
+six==1.11.0
+termcolor==1.1.0
+text-unidecode==1.2
+texttable==1.2.1
+urllib3==1.22
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+visitor==0.1.3
+Werkzeug==0.14.1
+WTForm==1.0
+WTForms==2.2.1
+xlrd==1.1.0
+xlwt==1.3.0
+youtube-dl==2018.6.11
+zope.interface==4.5.0
 eventlet
 gunicorn
-
-# ----------------------
-# Others
-# ----------------------
-addict
-shortuuid
-gmail
-datetime
